cart overflow fixing

--- a/ssr-blog/assets/cart.sass
+++ b/ssr-blog/assets/cart.sass
@@ -8,6 +8,7 @@
   padding: 24px 16px
   background: $white
   transition: .4s ease-in-out
+  overflow-y: overlay
   +tablet
     right: -460px
     width: 460px
